_includes/manuals/1.5/3.5.5_facts_and_the_enc.md

Foreman can act as a classifier to Puppet through the External Nodes interface. This is a mechanism provided by Puppet to ask for configuration data from an external service, via a script on the puppetmaster.

The external nodes script we supply also deals with uploading facts from hosts to Foreman, so we will discuss the two things together.

#### Configuration

##### puppetmaster

1. Copy [external_node_v2.rb.erb](https://raw.github.com/theforeman/puppet-foreman/2.1-stable/templates/external_node_v2.rb.erb) to the Puppet configuration directory, e.g. '/etc/puppet'
2. The name you choose for the file is arbitrary, but we will assume 'node.rb', e.g. '/etc/puppet/node.rb'. Ensure it is executable by the puppet user.
3. Edit the new file, and configure the settings:
   * url - The address of the Foreman server (e.g. http://foreman )
   * puppetdir - The location of Puppet's cache dir (e.g. /var/lib/puppet )
   * ssl\_\* - SSL certs as per <a href="manuals/{{page.version}}/index.html#5.4SecuringCommunicationswithSSL">Securing Communications With SSL</a>
5. Add the following lines to the [master] section of puppet.conf:
   * external_nodes = /etc/puppet/node.rb
   * node_terminus  = exec

Restart the puppetmaster. When the next agent checks in, the puppetmaster will upload
fact data for this host to Foreman, and download the ENC data.

The `--no-environment` option can be optionally specified to stop the ENC from
being authoritative about the agent's Puppet environment.  This can be useful
in development setups where the agent may be run against different
environments.

##### Client

No agent configuration is necessary to use this functionality.

##### Testing the config

Make sure that the puppet user can execute the ENC script and it works:

    sudo -u puppet /etc/puppet/node.rb [the name of a node, eg agent.local]

should output something like:

    parameters:
      puppetmaster: puppet
      foreman_env: &id001 production
    classes:
      helloworld:
    environment: *id001

This output should match the information displayed when you click on the YAML button
on the Host page in Foreman.

For further information see the [Puppet Labs docs on external nodes](http://docs.puppetlabs.com/guides/external_nodes.html)

#### Assigning data to hosts through the ENC

Foreman passes all assoicated parameters, classes,and class parameters, to the Host,
including those inherited from host groups, domains, or global settings. See section
<a href="manuals/{{page.version}}/index.html#4.2ManagingPuppet">Managing Puppet</a> for
more information on assigning configuration to hosts.

#### Creating hosts in Foreman with facts

By default, Foreman adds hosts to its database that it learns about through facts,
provided the "create_new_host_when_facts_are_uploaded" setting is enabled.

If locations or organizations are enabled, these can be inferred from the
"foreman_location" or "foreman_organization" facts as supplied by the host.  The
names of these facts can be changed with the "location_fact" and
"organization_fact" settings respectively.  Foreman will update hosts on each
fact upload based on the value of these facts.

If these facts aren't supplied, then the "default_location" and
"default_organization" settings can be used to set values globally when a
host doesn't have a location or an organization set.

More information in the [Configuration](/manuals/{{page.version}}/index.html#3.5.2ConfigurationOptions)
section.

#### Pushing facts to Foreman when not using the ENC functionality

There are several options for pushing fact data to Foreman if you are using Foreman
for reporting/inventory only.

##### Using node.rb

The ENC script (node.rb) accepts an option to run in 'batch-mode'. In this mode,
the script iterates over the cached fact data stored on the puppet master, and uploads
all of it to Foreman.

Download and configure the node.rb script as above, and then call it like this:

    sudo -u puppet /etc/puppet/node.rb --push-facts

The following options are available for node.rb's batch mode:

* `--push-facts` uploads all facts sequentially which have changed since the
  last run.
* `--push-facts-parallel` uploads all facts in parallel which have changed since
  the last run.  The number of threads is specified by the :threads setting or
  the number of processors.
* `--watch-facts` runs in the foreground and upload facts based on inotify
  events, used in conjunction with either --push-facts option.

##### Direct HTTP upload

As of Foreman 1.3, the fact-upload API endpoint accepts data in pure JSON. You can
push data to Foreman as a hash containing:

    {
      "name": "fqdn-of-host.domain.com",
      "certname": "optional-certname-of-host.domain.com",
      "facts": {
        "fact1": "string",
        "fact2": "true",
        "fact3": "1.2.3.4",
        ...
      }
    }

The 'certname' is optional but will be used to location the Host in Foreman if
supplied. The 'facts' hash must be a flat hash, not nested with other arrays or hashes.
See _link-to-API-when-its-updated-here_ for more details.

This body can be POSTed to '/api/hosts/facts' using Foreman API v2. See the
[node.rb template](https://raw.github.com/theforeman/puppet-foreman/2.1-stable/templates/external_node_v2.rb.erb) for an example of constructing and sending data in Ruby.
